refactor(backend): 불필요한 중복 코드 제거 및 상세 조회 api 구현
